--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="nf-core/rnavar: gatk4 rna variant calling">
+  <meta name="description" content="nf-core/rnavar: Nextflow RNA-Seq analysis pipeline, part of the nf-core community.">
   <title>nf-core/rnavar Pipeline Report</title>
 </head>
 <body>
